--- a/Linear Algebra for ML.ipynb
+++ b/Linear Algebra for ML.ipynb
@@ -1005,7 +1005,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 326,
+   "execution_count": 61,
    "id": "feb70407-3cf7-49cf-96e3-941750d29194",
    "metadata": {},
    "outputs": [],
@@ -1015,17 +1015,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 328,
+   "execution_count": 62,
    "id": "2796cd48-54fb-4e43-b0d4-cf084aeb42d6",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "22"
+       "np.int64(22)"
       ]
      },
-     "execution_count": 328,
+     "execution_count": 62,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1077,7 +1077,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 189,
+   "execution_count": 63,
    "id": "b593a2ca-59b4-4d4e-a964-f2579abccb45",
    "metadata": {},
    "outputs": [
@@ -1088,7 +1088,7 @@
        "       [5, 6, 7]])"
       ]
      },
-     "execution_count": 189,
+     "execution_count": 63,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1102,7 +1102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 211,
+   "execution_count": 64,
    "id": "938ae172-b60a-4799-9dbc-e499555e834a",
    "metadata": {},
    "outputs": [
@@ -1125,7 +1125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 227,
+   "execution_count": 65,
    "id": "70997172-c380-4606-a046-38dbd0a13433",
    "metadata": {},
    "outputs": [],
@@ -1135,7 +1135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 229,
+   "execution_count": 66,
    "id": "a46cb8c6-f1b2-4461-b840-752d32f21272",
    "metadata": {},
    "outputs": [
@@ -1145,7 +1145,7 @@
        "array([32, 62])"
       ]
      },
-     "execution_count": 229,
+     "execution_count": 66,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1156,7 +1156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 231,
+   "execution_count": 67,
    "id": "5d26b636-9767-461b-ac1c-8941502c5d96",
    "metadata": {},
    "outputs": [
@@ -1166,7 +1166,7 @@
        "numpy.ndarray"
       ]
      },
-     "execution_count": 231,
+     "execution_count": 67,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1185,7 +1185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 240,
+   "execution_count": 68,
    "id": "3a5accc9-fd21-42d4-a13e-4b566920194a",
    "metadata": {},
    "outputs": [
@@ -1196,7 +1196,7 @@
        "       [5, 6, 7]])"
       ]
      },
-     "execution_count": 240,
+     "execution_count": 68,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1208,7 +1208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 242,
+   "execution_count": 69,
    "id": "90129b59-2874-437e-9974-e9d2c77e6624",
    "metadata": {},
    "outputs": [
@@ -1220,7 +1220,7 @@
        "       [4, 7]])"
       ]
      },
-     "execution_count": 242,
+     "execution_count": 69,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1247,7 +1247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 259,
+   "execution_count": 70,
    "id": "43b2b19b-f813-47df-b173-78f1d247ad4b",
    "metadata": {},
    "outputs": [
@@ -1309,7 +1309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 332,
+   "execution_count": 71,
    "id": "2c6c7a0d-a59e-42a3-ae0c-c010119c8e8b",
    "metadata": {},
    "outputs": [
@@ -1321,7 +1321,7 @@
        "       [32,  3,  5,  3]])"
       ]
      },
-     "execution_count": 332,
+     "execution_count": 71,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1334,7 +1334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 338,
+   "execution_count": 72,
    "id": "9d6976da-144c-4d80-9575-3dc4fcc19a42",
    "metadata": {},
    "outputs": [
@@ -1346,7 +1346,7 @@
        "       [32,  7,  7,  3]])"
       ]
      },
-     "execution_count": 338,
+     "execution_count": 72,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1359,7 +1359,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 302,
+   "execution_count": 73,
    "id": "6acd85c2-5df4-4b27-925f-76e122930891",
    "metadata": {},
    "outputs": [
@@ -1379,7 +1379,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 340,
+   "execution_count": 74,
    "id": "d580fc64-9215-4c3d-8cff-36bc9576b616",
    "metadata": {},
    "outputs": [],
@@ -1389,7 +1389,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 342,
+   "execution_count": 75,
    "id": "6c15cc11-d9e8-4f3b-8c64-9185ee724cf3",
    "metadata": {},
    "outputs": [
@@ -1401,7 +1401,7 @@
        "       [1024,   21,   35,    9]])"
       ]
      },
-     "execution_count": 342,
+     "execution_count": 75,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1412,7 +1412,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": null,
    "id": "251b6d98-4dc2-455b-b698-5f15ceb0de3f",
    "metadata": {},
    "outputs": [],
@@ -1420,7 +1420,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 372,
+   "execution_count": 76,
    "id": "b32a655e-47d2-4d51-a78b-e485bc6c3066",
    "metadata": {},
    "outputs": [],
@@ -1431,7 +1431,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 385,
+   "execution_count": 77,
    "id": "5ed2a91d-2167-41f4-b632-0b386592f4a8",
    "metadata": {},
    "outputs": [
@@ -1442,7 +1442,7 @@
        "       [2, 3, 5, 6]])"
       ]
      },
-     "execution_count": 385,
+     "execution_count": 77,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1453,7 +1453,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 381,
+   "execution_count": 78,
    "id": "9a4bd9d3-bc9f-4941-82e0-f24d0286aba8",
    "metadata": {},
    "outputs": [
@@ -1466,7 +1466,7 @@
        "       [7, 9, 5, 3]])"
       ]
      },
-     "execution_count": 381,
+     "execution_count": 78,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1477,7 +1477,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 375,
+   "execution_count": 79,
    "id": "097d650a-b0fe-46ad-a048-f24afef8e305",
    "metadata": {},
    "outputs": [
@@ -1497,7 +1497,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 377,
+   "execution_count": 80,
    "id": "3018bbae-ab1a-4d18-8883-6f67b26e2a58",
    "metadata": {},
    "outputs": [],
@@ -1507,7 +1507,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 81,
    "id": "bdd32f26-26fb-4b6a-9c12-8b32a72b1544",
    "metadata": {},
    "outputs": [
@@ -1518,7 +1518,7 @@
        "       [92, 99, 81, 66]])"
       ]
      },
-     "execution_count": 379,
+     "execution_count": 81,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1528,11 +1528,9 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "id": "1c9a576f",
    "metadata": {},
-   "outputs": [],
    "source": [
     "### Matrix Inversion"
    ]
@@ -1540,10 +1538,54 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "b698be17",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "- This helps us to  find the values of a "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 83,
+   "id": "d6e72e4c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "M1= np.array([[2,4],[5,6]])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 84,
    "id": "d20c1343",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "M1_inverse= np.linalg.inv(M1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 85,
+   "id": "2c64fc4d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[-0.75 ,  0.5  ],\n",
+       "       [ 0.625, -0.25 ]])"
+      ]
+     },
+     "execution_count": 85,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "M1_inverse"
+   ]
   },
   {
    "cell_type": "markdown",
