Updated Linear Algebra for ML.ipynb

--- a/Linear Algebra for ML.ipynb
+++ b/Linear Algebra for ML.ipynb
@@ -1536,6 +1536,37 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "cca055f4",
+   "metadata": {},
+   "source": [
+    "- Essentially, if you want to fnd where your orignial vector lies, you can multiply the output vector \n",
+    "by the matrix inverse \n",
+    "- This helps us find variables, if we have known inputs and outputs, essentially, it allows us know what the input weights are\n",
+    "- This is representend as $X^-1$\n",
+    "- If we multiply the Matrix X .$X^-1$= I, where I is Identity\n",
+    "- For us to be able to find the matrix inverse, the matrix needs  to have a determinant\n",
+    "- This means, if our matrix is dependent or has a reduced rank, we cnanot find its inverse.\n",
+    "- Finally this can be counted if the matrix ix squared"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fb1a9998",
+   "metadata": {},
+   "source": [
+    "### Practicality In ML"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7b289595",
+   "metadata": {},
+   "source": [
+    "- "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "b698be17",
@@ -1586,6 +1617,32 @@
    "source": [
     "M1_inverse"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a07201f5",
+   "metadata": {},
+   "source": [
+    "##### Trying faulty matrix inversions \n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5543f169",
+   "metadata": {},
+   "source": [
+    "\n",
+    "##### Non-square Matrix "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b2929b4a",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
